<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>bug_reproduce_rclpy</name>
  <version>0.1.0</version>
  <description>
    rclcpy test codes to reproduce bug
  </description>
  <maintainer email="Barry.Xu@sony.com">Barry Xu</maintainer>
  <license>Apache License 2.0</license>
  <author>Barry Xu</author>
  <author email="Barry.Xu@sony.com">Barry Xu</author>

  <exec_depend>example_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
